--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "smart-icons",
-  "version": "0.0.3",
-  "homepage": "https://github.com/smart-components/smart-icons",
-  "description": "Icon font for smart-screen",
+  "name": "fxos-tv-icons",
+  "version": "1.0.0",
+  "homepage": "https://github.com/fxos-components/fxos-tv-icons",
+  "description": "Icon font for firefox OS TV",
   "license": "MPL",
   "private": true,
   "ignore": [
