--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "smart-icons",
-  "version": "0.0.0",
+  "name": "fxos-tv-icons",
+  "version": "1.0.0",
+  "homepage": "https://github.com/fxos-components/fxos-tv-icons",
+  "license": "MIT",
+  "main": "fxos-tv-icons.js",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-rename": "^0.1.3",
     "grunt-replace": "^0.7.8",
-    "grunt-webfont": "^0.5.1",
+    "grunt-webfont": "^0.5.4",
+    "jshint": "^2.7.0",
     "optimist": "^0.6.1"
+  },
+  "scripts": {
+    "lint": "jshint fxos-tv-icons.js",
+    "gh-pages": "git push upstream master:gh-pages",
+    "build": "grunt"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/fxos-components/fxos-tv-icons.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fxos-components/fxos-tv-icons/issues"
   }
 }
